# WebCourseWrk

./: .gitignore  Jenkinsfile  README.md  db.sqlite3  docker-compose.yml  environment.yml  requirements.txt
app/: settings.py  urls.py
characters/: admin.py  api.py  models.py  serializers.py  tests.py  views.py
characters/management/: generate_data.py
characters/management/commands/: generate_data.py
characters/migrations/: 0004_alter_group_options.py  0007_alter_character_media_type.py  0009_character_picture_alter_offart_picture.py  0010_character_user.py  0011_alter_character_user.py  0013_media_user.py  0014_rename_user_usermine.py
client/: package-lock.json  package.json  vite.config.js
client/src/: App.vue  main.js
client/src/router/: index.js
client/src/stores/: userStore.js
client/src/views/: AuthorsView.vue  CharactersView.vue  EpisodesView.vue  LoginView.vue  MediaView.vue  OffArtView.vue
server/: Dockerfile  db.sqlite3  pyproject.toml
server/app/: settings.py
server/characters/: models.py  views.py
server/characters/migrations/: 0001_initial.py  0002_rename_caracter_character_alter_character_options.py  0003_group_character_group.py  0005_author_mediatype_alter_character_age_and_more.py  0006_remove_media_off_art_remove_offart_media_and_more.py  0008_alter_media_release_year.py  0012_user.py  0015_usermine_surname_alter_media_title_and_more.py
server/templates/characters/: show_characters.html
