[project]
name = "inrtu-web"
version = "1.0.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django (==5.1.3)",
    "djangorestframework (==3.15.2)",
    "pytest-django (==4.9.0)",
    "pillow (==11.3.0)",
    "model-bakery (==1.20.0)",
    "uvicorn (>=0.38.0,<0.39.0)",
    "whitenoise (>=6.11.0,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
